--- a/trunk/DancerDonnaProject5/styles/styles.css
+++ b/trunk/DancerDonnaProject5/styles/styles.css
@@ -1,122 +1,28 @@
 body
 {
-	margin: 0px;
-	padding: 0px;
-	font-size: 12px;
-	font-family: Arial;
+	background: lavender;
+	font-family: lucida sans;
+	color: darkslategrey;
 }
 
-#main-info
+nav a
 {
-	float: left;
-	width: 627px;
+	padding-right: 20px;
 }
 
-#aside-info
+#quiz-link
 {
-	float: left;
-	width: 200px;
-	vertical-align: top;
-	padding-left: 10px;
+	display: none;
 }
 
-#main-content-clear
-{
-	clear: both;
-}
-
-#topic-title
-{
-	margin-top: 0px;
-	font-size: 20px
-}
-	
 #main-content
 {
-	height: 368px;
-	padding: 10px;
-	margin: 10px;
+	display: table;
 }
 
-#navigation
+.column
 {
-	background: #666666;	
-	padding: 5px;
-	width: 886px;
-	float: left;
-	height: 18px;
-}
-
-#sub-navigation
-{
-	background: #dddddd;	
-	padding: 5px;
-	width: 886px;
-	float: left;
-	height: 18px;
-	font-size: 14px;
-}
-
-.sub-menu-link:hover
-{
-	color: yellow;
-}
-	
-.sub-menu-link
-{
-	padding: 0px 10px;
-	font-weight: bold;
-	text-decoration: none;
-	font-family: Arial;
-	font-size: 14px;
-	color: black;
-}
-
-.menu-link-inactive
-{
-	padding: 0px 10px;
-	font-weight: bold;
-	text-decoration: none;
-	font-family: Arial;
-	font-size: 14px;
-	color: black;
-}
-
-.menu-link
-{
-	padding: 0px 10px;
-	font-weight: bold;
-	text-decoration: none;
-	font-family: Arial;
-	font-size: 14px;
-	color: white;
-}
-
-.menu-link:hover
-{
-	color: yellow;
-}
-
-#aside-title-audio
-{
-	background: #666666;
-	width: 233px;
-	font-size: 14px;
-	font-weight: bold;
-	color: white;
-	padding: 5px;
-}
-
-#transcript
-{
-	color: green;
-	font-size: 12px;
-	overflow: auto;
-	height: 321px;
-	width: 233px;
-}
-
-audio
-{
-	width: 230px;
+	display: table-cell;
+	width: 500px;
+	text-align:center;
 }
