Added more styling to CSS, changed font family, font size, added hover color, added class to CSS to enable the changes.

--- a/DancerDonnaProject5/styles/styles.css
+++ b/DancerDonnaProject5/styles/styles.css
@@ -35,3 +35,28 @@ nav a
 	float: left;
 	height: 18px;
 }
+
+.menu-link
+{
+	padding: 0px 10px;
+	font-weight: bold;
+	text-decoration: none;
+	font-family: LucidaSans;
+	font-size: 20px;
+	color: white;
+}
+
+.menu-link:hover
+{
+	color: darkblue;
+}
+
+.menu-link-inactive
+{
+	padding: 0px 10px;
+	font-weight: bold;
+	text-decoration: none;
+	font-family: LucidaSans;
+	font-size: 20px;
+	color: black;
+}
